--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: quest;
-    src: url(../fonts/quest.ttf);
+    font-family: Trebuchet_MS;
+    src: url(../fonts/Trebuchet_MS.ttf);
 }
 
 body {
