--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -36,7 +36,7 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
-    height: 29%;
+    height: 25vh;
     margin-top: 1%;
 }
 
