--- a/client/src/assets/css/nav_buttons.css
+++ b/client/src/assets/css/nav_buttons.css
@@ -1,9 +1,9 @@
-.btn-small {
-    background-color: #1543DC;
+.navButtons {
+    background-color: #063852;
     border-radius: 6px;
-    color: #FFB000;
+    color: #F0810F;
     display: block;
-    margin: 1% auto;
+    margin: 3% auto;
     width: 100%;
 }
 
