--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -36,7 +36,7 @@ body {
 }
 
 .logo {
-    background-image: url("../images/logo.jpg");
+    background-image: url("../images/logo.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
