--- a/client/src/assets/css/sdc_kit.css
+++ b/client/src/assets/css/sdc_kit.css
@@ -20,7 +20,13 @@
 
 .card {
     background-color: white;
+
     height: 93%;
+}
+
+.prodImage {
+    height: 100%;
+    width: 100%;
 }
 
 .carousel .carousel-item {
@@ -58,7 +64,6 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .inputQuantity {
-    background-color: #063852;
     color: #F0810F;
     height: 5%;
     width: 5%;
@@ -67,4 +72,8 @@ input[type=number]::-webkit-outer-spin-button {
 .quantityField {
     bottom: 5%;
     position: absolute;
+}
+
+.productQuantity {
+    color: #063852;
 }
