--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -22,7 +22,6 @@ body {
 
 .footer-copyright > p {
     margin: 0;
-
 }
 
 .main_content {
@@ -31,7 +30,7 @@ body {
 }
 
 .logo {
-    background-image: url("../images/logo.png");
+    background-image: url("../../../dist/logo.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
