--- a/client/src/assets/css/sdc_kit.css
+++ b/client/src/assets/css/sdc_kit.css
@@ -46,8 +46,6 @@
     .price {
 
     }
-
-
 }
 
 .prodImage {
@@ -71,18 +69,9 @@
     font-size: 2em;
 }
 
-/*input[type=number]:not(.browser-default) {*/
-    /*background-color: #F0810F;*/
-    /*box-shadow: none;*/
-    /*border-bottom: none;*/
-    /*border-radius: 6px;*/
-    /*color: #063852;*/
-    /*height: 2rem;*/
-    /*margin-left: 3%;*/
-    /*width: 20%;*/
-/*}*/
-
-
+.btn:hover {
+    background-color: #006400;
+}
 
 .inputButtons, .inputSubmit {
     background-color: #063852;
