--- a/client/src/assets/css/summary.css
+++ b/client/src/assets/css/summary.css
@@ -2,9 +2,10 @@
     background-color: #063852;
     border-radius: 6px;
     color: #F0810F;
-    margin: 7%;
+    margin-bottom: 5%;
 }
 
 .summary {
     background-color: rgba(242,242,242,0.5);
+    border-radius: 6px;
 }
