added more functionality to cart button

--- a/client/src/assets/css/cart.css
+++ b/client/src/assets/css/cart.css
@@ -12,11 +12,11 @@
     color: #006400;
 }
 
-.checkout {
-    color: #1543DC;
-    font-size: 2em;
-    top: 4%;
-}
+/*.checkout {*/
+    /*color: #1543DC;*/
+    /*font-size: 2em;*/
+    /*top: 4%;*/
+/*}*/
 
 .shop_update {
     margin-top: 3%;
