--- a/client/src/assets/css/contact.css
+++ b/client/src/assets/css/contact.css
@@ -8,27 +8,5 @@
     background-color: #063852;
     border-radius: 6px;
     color: #F0810F;
-}
-
-.input-field {
-    margin-top: 1px;
-}
-
-.input-field[type=text] {
-    color: #063852;
-    position: relative;
-}
-
-input{
-    border-bottom: 1px solid #063852 !important;
-    box-shadow: 0 1px 0 0 #063852 !important;
-}
-
-input:focus {
-    border-bottom: 1px solid #063852 !important;
-    box-shadow: 0 1px 0 0 #063852 !important;
-}
-
-label.active {
-    color: #063852;
+    margin: 0 2% 0 2%;
 }
