--- a/client/src/assets/css/input.css
+++ b/client/src/assets/css/input.css
@@ -20,6 +20,11 @@ input:focus {
     box-shadow: 0 1px 0 0 #063852 !important;
 }
 
+.inputError {
+    color: #E6DF44;
+    margin: 0;
+}
+
 label.active {
     color: #063852;
 }
