--- a/client/src/assets/css/summary.css
+++ b/client/src/assets/css/summary.css
@@ -9,3 +9,11 @@
     background-color: rgba(242,242,242,0.5);
     border-radius: 6px;
 }
+
+.browser-default {
+    background-color: transparent;
+    border-radius: 6px;
+    font-weight: bolder;
+    padding: 0;
+    width: auto;
+}
