--- a/client/src/assets/css/sdc_kit.css
+++ b/client/src/assets/css/sdc_kit.css
@@ -26,28 +26,40 @@
 .card {
     background-color: white;
     border-radius: 6px;
+    display: inline-block;
     height: 95%;
+    margin-left: 1%;
+    width: 49%;
 }
 
 .prodImage {
+    border-radius: 6px;
     height: 100%;
     width: 100%;
 }
 
 .carousel .carousel-item {
-    bottom: 31%;
-    height: 80%;
+    height: 45vh;
+    width: 60%;
+}
+
+.content {
+    display: inline-block;
+    height: 100%;
+    position: absolute;
+    width: 50%;
 }
 
 .name {
     color: white;
     font-size: 2em;
-    margin-top: 16%;
+    margin: 14% 3% 0 3%;
 }
 
 .price {
     color: #063852;
     font-size: 2em;
+    text-align: center;
 }
 
 .quantityField {
@@ -65,7 +77,7 @@
 }
 
 .minusButton {
-    margin-left: 8%;
+    margin-left: 10%;
 }
 
 .inputQuantity {
@@ -92,6 +104,7 @@
 
 @media only screen and (max-device-width: 480px) {
     .card {
+        display: block; 
         height: 50%;
     }
 
