--- a/client/src/assets/css/app.css
+++ b/client/src/assets/css/app.css
@@ -10,12 +10,11 @@ body {
 }
 
 .footer-copyright {
+    bottom: 0;
     color: #E6DF44;
     font-weight: 500;
-}
-
-.footer-copyright > p {
-    margin: 0;
+    position: absolute;
+    transform: translate(100%, -50%);
 }
 
 .main_content {
@@ -23,6 +22,7 @@ body {
     display: inline-block;
     margin-left: 15%;
     width: 70%;
+    min-height: 100vh;
 }
 
 .logo {
