--- a/client/src/assets/css/sdc_kit.css
+++ b/client/src/assets/css/sdc_kit.css
@@ -77,7 +77,7 @@
 }
 
 .minusButton {
-    margin-left: 10%;
+    margin-left: 12%;
 }
 
 .inputQuantity {
@@ -102,26 +102,107 @@
     background-color: #063852;
 }
 
-@media only screen and (max-device-width: 480px) {
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen 
+and (min-device-width : 320px) 
+and (max-device-width : 480px) {
+    .carousel .carousel-item {
+        height: 57vh;   
+        width: 70%;
+    }
+
+    .carousel-item {
+        bottom: 20%;
+    }
+
+    .content {
+        height: 46%;
+        width: 98%;
+    }
+
     .card {
         display: block; 
-        height: 50%;
+        height: 47%;
+        width: 97%;
     }
 
     .name {
-        font-size: 1.5em;
+        font-size: 1.3em;
         margin-top: 0;
+        text-align: center;
     }
 
     .price {
-        font-size: 1.5em;
+        font-size: 1.3em;
+    }
+
+    .quantityField {
+        margin-top: 3%;
     }
 
     .minusButton {
-        margin-left: 0;
+        margin-left: 4%;
     }
 
     .productQuantity {
         padding: 4% 6%;
     }
+
+    .inputSubmit {
+        padding-left: 4%;
+    }
+}
+
+/* Smartphones (landscape) ----------- */
+@media only screen 
+and (min-width : 321px) {
+/* Styles */
+}
+
+/* Smartphones (portrait) ----------- */
+@media only screen 
+and (max-width : 320px) {
+/* Styles */
+}
+
+/* Tablets, iPads (portrait and landscape) ----------- */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) {
+/* Styles */
+}
+
+/* Tablets, iPads (landscape) ----------- */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : landscape) {
+/* Styles */
+}
+
+/* Tablets, iPads (portrait) ----------- */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : portrait) {
+/* Styles */
+}
+
+/* Desktops and laptops ----------- */
+@media only screen 
+and (min-width : 1224px) {
+/* Styles */
+}
+
+/* Large screens ----------- */
+@media only screen 
+and (min-width : 1824px) {
+/* Styles */
+}
+
+/* iPhone 4 ----------- */
+@media
+only screen and (-webkit-min-device-pixel-ratio : 1.5),
+only screen and (min-device-pixel-ratio : 1.5) {
+/* Styles */
 }
