--- a/client/src/assets/css/cart.css
+++ b/client/src/assets/css/cart.css
@@ -1,6 +1,11 @@
-.cart, .clear {
+.cart {
     color: #063852;
     font-size: 2em;
+}
+
+.clear {
+    color: #063852;
+    font-size: 2.6em;
 }
 
 .clear:hover {
@@ -16,19 +21,13 @@
     display: inline-block;
 }
 
-table.rounded th:last-child {
-    border-top-right-radius: 6px;
-}
-
-table.rounded th:first-child {
+table.rounded tr td:first-child {
     border-top-left-radius: 6px;
-}
-
-table.rounded tr:last-child td:first-child {
     border-bottom-left-radius: 6px;
-}
+}    
 
-table.rounded tr:last-child td:last-child {
+table.rounded tr td:last-child {
+    border-top-right-radius: 6px;
     border-bottom-right-radius: 6px;
 }
 
@@ -46,71 +45,69 @@ table.rounded tr:last-child td:last-child {
 
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen 
-and (min-device-width : 320px) 
-and (max-device-width : 480px) {
+and (min-width : 320px) 
+and (max-width : 480px) {
     html {
-        font-size: 0.8em;
+        font-size: 0.9em;
+    }
+
+    .table {
+        padding: 0 !important;
     }
 
     .inputButtons {
         display: block;
+        margin: auto;
+    }
+
+    .clear {
+        font-size: 2em;
+        padding-top: 10vh;
+        padding-bottom: 10vh;
+    }
+
+    .cartAddBtn {
+        width: 64%;
     }
 
     .shop_update {
+        margin: auto;
         margin-bottom: 4%;
+        width: 70%;
     }
 }
 
-/* Smartphones (landscape) ----------- */
+/* Smartphones ----------- */
 @media only screen 
-and (min-width : 321px) {
-/* Styles */
-}
-
-/* Smartphones (portrait) ----------- */
-@media only screen 
-and (max-width : 320px) {
-/* Styles */
-}
-
-/* Tablets, iPads (portrait and landscape) ----------- */
-@media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) {
-/* Styles */
+and (min-width: 481px) 
+and (max-width: 767px) {
+    .table {
+       
+    }
 }
 
 /* Tablets, iPads (landscape) ----------- */
 @media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
-and (orientation : landscape) {
+and (min-width : 768px) 
+and (max-width : 1024px) 
+and (orientation: landscape) {
 /* Styles */
 }
 
 /* Tablets, iPads (portrait) ----------- */
 @media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
+and (min-width : 768px) 
+and (max-width : 1024px) 
 and (orientation : portrait) {
 /* Styles */
 }
 
-/* Desktops and laptops ----------- */
-@media only screen 
-and (min-width : 1224px) {
-/* Styles */
+@media only screen
+and (min-width: 1025px) 
+and (max-width: 1280px) {
+
 }
 
-/* Large screens ----------- */
-@media only screen 
-and (min-width : 1824px) {
-/* Styles */
-}
+@media (min-width: 1281px) {
 
-/* iPhone 4 ----------- */
-@media
-only screen and (-webkit-min-device-pixel-ratio : 1.5),
-only screen and (min-device-pixel-ratio : 1.5) {
-/* Styles */
 }
