--- a/client/src/assets/css/guest_checkout.css
+++ b/client/src/assets/css/guest_checkout.css
@@ -7,63 +7,46 @@
 
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen 
-and (min-device-width : 320px) 
-and (max-device-width : 480px) {
+and (min-width : 320px) 
+and (max-width : 480px) {
     .completeCheckout {
         margin-top: 2%;
     }
+
+    .contact {
+        font-size: 1.6em;
+    }
 }
 
-/* Smartphones (landscape) ----------- */
+/* Smartphones ----------- */
 @media only screen 
-and (min-width : 321px) {
-/* Styles */
-}
-
-/* Smartphones (portrait) ----------- */
-@media only screen 
-and (max-width : 320px) {
-/* Styles */
-}
-
-/* Tablets, iPads (portrait and landscape) ----------- */
-@media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) {
+and (min-width: 481px) 
+and (max-width: 767px) {
 /* Styles */
 }
 
 /* Tablets, iPads (landscape) ----------- */
 @media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
-and (orientation : landscape) {
+and (min-width : 768px) 
+and (max-width : 1024px) 
+and (orientation: landscape) {
 /* Styles */
 }
 
 /* Tablets, iPads (portrait) ----------- */
 @media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
+and (min-width : 768px) 
+and (max-width : 1024px) 
 and (orientation : portrait) {
 /* Styles */
 }
 
-/* Desktops and laptops ----------- */
-@media only screen 
-and (min-width : 1224px) {
-/* Styles */
+@media only screen
+and (min-width: 1025px) 
+and (max-width: 1280px) {
+
 }
 
-/* Large screens ----------- */
-@media only screen 
-and (min-width : 1824px) {
-/* Styles */
-}
+@media (min-width: 1281px) {
 
-/* iPhone 4 ----------- */
-@media
-only screen and (-webkit-min-device-pixel-ratio : 1.5),
-only screen and (min-device-pixel-ratio : 1.5) {
-/* Styles */
 }
