--- a/client/src/assets/css/sdc_kit.css
+++ b/client/src/assets/css/sdc_kit.css
@@ -104,16 +104,12 @@
 
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen 
-and (min-device-width : 320px) 
-and (max-device-width : 480px) {
+and (min-width : 320px) 
+and (max-width : 480px) {
     .carousel .carousel-item {
-        height: 57vh;   
-        width: 70%;
-    }
-
-    .carousel-item {
-        bottom: 20%;
-    }
+        min-height: 70vh;
+        min-width: 70%;
+    }    
 
     .content {
         height: 46%;
@@ -128,16 +124,12 @@ and (max-device-width : 480px) {
 
     .name {
         font-size: 1.3em;
-        margin-top: 0;
+        margin-top: 7%;
         text-align: center;
     }
 
     .price {
         font-size: 1.3em;
-    }
-
-    .quantityField {
-        margin-top: 3%;
     }
 
     .minusButton {
@@ -153,56 +145,43 @@ and (max-device-width : 480px) {
     }
 }
 
-/* Smartphones (landscape) ----------- */
+/* Smartphones ----------- */
 @media only screen 
-and (min-width : 321px) {
-/* Styles */
-}
+and (min-width: 481px) 
+and (max-width: 767px) {
+    .carousel .carousel-item {
+        min-height: 65vh;
+        min-width: 70%;
+    }    
 
-/* Smartphones (portrait) ----------- */
-@media only screen 
-and (max-width : 320px) {
-/* Styles */
-}
-
-/* Tablets, iPads (portrait and landscape) ----------- */
-@media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) {
-/* Styles */
+    table.rounded tr td:first-child {
+        padding-top: 23vh;
+        padding-bottom: 22vh;
+    }    
 }
 
 /* Tablets, iPads (landscape) ----------- */
 @media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
-and (orientation : landscape) {
+and (min-width : 768px) 
+and (max-width : 1024px) 
+and (orientation: landscape) {
 /* Styles */
 }
 
 /* Tablets, iPads (portrait) ----------- */
 @media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
+and (min-width : 768px) 
+and (max-width : 1024px) 
 and (orientation : portrait) {
 /* Styles */
 }
 
-/* Desktops and laptops ----------- */
-@media only screen 
-and (min-width : 1224px) {
-/* Styles */
+@media only screen
+and (min-width: 1025px) 
+and (max-width: 1280px) {
+
 }
 
-/* Large screens ----------- */
-@media only screen 
-and (min-width : 1824px) {
-/* Styles */
-}
+@media (min-width: 1281px) {
 
-/* iPhone 4 ----------- */
-@media
-only screen and (-webkit-min-device-pixel-ratio : 1.5),
-only screen and (min-device-pixel-ratio : 1.5) {
-/* Styles */
 }
