--- a/client/src/assets/css/nav_buttons.css
+++ b/client/src/assets/css/nav_buttons.css
@@ -28,7 +28,7 @@
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen 
 and (min-width : 320px) 
-and (max-width : 480px) {
+and (max-width : 1000px) {
     .mobileNavBar {
         top: 0;
         right: 0;
@@ -37,7 +37,7 @@ and (max-width : 480px) {
 }
 
 /* Smartphones ----------- */
-@media only screen 
+/* @media only screen 
 and (min-width: 481px) 
 and (max-width: 767px) {
     .mobileNavBar {
@@ -45,21 +45,21 @@ and (max-width: 767px) {
         right: 0;
         text-align: center;
     }
+} */
+
+/* Tablets, iPads (portrait) ----------- */
+@media only screen 
+and (min-width : 601px) 
+and (max-width : 768px) 
+and (orientation : portrait) {
+/* Styles */
 }
 
 /* Tablets, iPads (landscape) ----------- */
 @media only screen 
-and (min-width : 768px) 
-and (max-width : 1024px) 
+and (min-width : 601px) 
+and (max-width : 768px) 
 and (orientation: landscape) {
-/* Styles */
-}
-
-/* Tablets, iPads (portrait) ----------- */
-@media only screen 
-and (min-width : 768px) 
-and (max-width : 1024px) 
-and (orientation : portrait) {
 /* Styles */
 }
 
