--- a/client/src/assets/css/product_carousel.css
+++ b/client/src/assets/css/product_carousel.css
@@ -1,5 +1,5 @@
 .carousel {
-    min-height: 71vh;
+    min-height: 415px;
 }
 
 /* Smartphones (portrait and landscape) ----------- */
@@ -7,31 +7,32 @@
 and (min-width : 320px) 
 and (max-width : 480px) {
     .carousel {
-        top: 12vh;
+        min-height: 66vh;
     }
 }
 
 @media only screen 
 and (min-width: 481px) 
-and (max-width: 767px) {
+and (max-width: 600px) {
     .carousel {
-        top: 12vh;
+        height: auto;
+        max-height: auto;
     }
-}
-
-/* Tablets, iPads (landscape) ----------- */
-@media only screen 
-and (min-width : 768px) 
-and (max-width : 1024px) 
-and (orientation: landscape) {
-/* Styles */
 }
 
 /* Tablets, iPads (portrait) ----------- */
 @media only screen 
-and (min-width : 768px) 
-and (max-width : 1024px) 
+and (min-width : 601px) 
+and (max-width : 768px) 
 and (orientation : portrait) {
+/* Styles */
+}
+
+/* Tablets, iPads (landscape) ----------- */
+@media only screen 
+and (min-width : 601px) 
+and (max-width : 768px) 
+and (orientation: landscape) {
 /* Styles */
 }
 
