responsive working in progress

--- a/client/src/assets/css/cart.css
+++ b/client/src/assets/css/cart.css
@@ -39,7 +39,7 @@ table.rounded tr td:last-child {
     margin-right: 8%;
 }
 
-.inputButtons, .cartQuantity {
+.cartAddBtn, cartMinusBtn, .cartQuantity {
     display: inline-block;
 } 
 
