--- a/client/src/assets/css/contact.css
+++ b/client/src/assets/css/contact.css
@@ -6,7 +6,7 @@
 
 .contactButton {
     background-color: #063852;
-    border-radius: 6px;
+    border-radius: 0.6em;
     color: #F0810F;
     margin: 0 2% 0 2%;
 }
