--- a/client/src/assets/css/guest_checkout.css
+++ b/client/src/assets/css/guest_checkout.css
@@ -1,6 +1,6 @@
 .completeCheckout {
     background-color: #063852;
-    border-radius: 6px;
+    border-radius: 0.6em;
     color: #F0810F;
     margin: 0 2% 0 2%;
 }
