--- a/client/src/assets/css/nav_buttons.css
+++ b/client/src/assets/css/nav_buttons.css
@@ -5,7 +5,7 @@
 }
 .navButtons {
     background-color: #063852;
-    border-radius: 6px;
+    border-radius: 0.6em;
     color: #F0810F;
     display: block;
     margin: 5% auto;
@@ -14,7 +14,7 @@
 
 .iconButtons {
     background-color: #063852;
-    border-radius: 6px;
+    border-radius: 0.6em;
     color: #F0810F;
     font-size: 1.5em;
     margin: 5% auto;
@@ -52,7 +52,19 @@ and (max-width: 767px) {
 and (min-width : 601px) 
 and (max-width : 768px) 
 and (orientation : portrait) {
-/* Styles */
+    .navBar {
+        display: none !important;
+    }
+
+    .mobileNavBar {
+        display: inline-block !important;
+    }
+
+    .iconButtons {
+        display: block;
+        font-size: 2em;
+        width: 53%;
+    }
 }
 
 /* Tablets, iPads (landscape) ----------- */
