--- a/client/src/assets/css/comments.css
+++ b/client/src/assets/css/comments.css
@@ -16,15 +16,70 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, 23%);
-    width: 30%;
-    font-size: 2em;
+    font-size: 2em; 
     color: #F0810F;
     position: absolute;
 }
 
-@media only screen and (max-device-width: 480px) {
+@media only screen 
+and (min-width : 100px)
+and (max-width : 319px) {
     .comment {
-        font-size: 1.1em;
+        font-size: 5vw; 
     }
+}
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen 
+and (min-width : 320px) 
+and (max-width : 480px)  {
+    .comment {
+        font-size: 5vw; 
+        transform: translate(-50%, 0%);
+    }
+}
+
+@media only screen 
+and (min-width: 481px) 
+and (max-width: 600px) {
+    .comment {
+        font-size: 5vw; 
+        transform: translate(-50%, 0%);
+    }
+}
+
+/* Tablets, iPads (portrait) ----------- */
+@media only screen 
+and (min-width : 601px) 
+and (max-width : 768px) 
+and (orientation : portrait) {
+    .comment {
+        font-size: 5vw; 
+        transform: translate(-50%, 0%);
+    }
+}
+
+/* Tablets, iPads (landscape) ----------- */
+@media only screen 
+and (min-width : 601px) 
+and (max-width : 768px) 
+and (orientation: landscape) {
+    .comment {
+        font-size: 5vw; 
+        transform: translate(-50%, 0%);
+    }
+}
+
+@media only screen
+and (min-width: 769px) 
+and (max-width: 1280px) {
+    .comment {
+        font-size: 5vw; 
+        transform: translate(-50%, 0%);
+    }
+}
+
+@media (min-width: 1281px) {
+
 }
 
