--- a/client/src/assets/css/product_carousel.css
+++ b/client/src/assets/css/product_carousel.css
@@ -1,23 +1,20 @@
 .carousel {
-    /* min-height: 415px; */
+    height: 415px;
 }
 
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen 
 and (min-width : 320px) 
 and (max-width : 480px) {
-    .carousel {
+    /* .carousel {
         min-height: 66vh;
-    }
+    } */
 }
 
 @media only screen 
 and (min-width: 481px) 
 and (max-width: 600px) {
-    .carousel {
-        height: auto;
-        max-height: auto;
-    }
+    
 }
 
 /* Tablets, iPads (portrait) ----------- */
